# nurc-lacrosse-bot-legacy2015

./: .CMakeLists.txt  .gitignore  CMakeLists.txt  Makefile  README.md
include/: BallTracker.h
include/lacrosse-bot/algorithm/: Algorithm.hpp
include/lacrosse-bot/filter/: Filter.h  Filter.hpp  HSVThresholdFilter.h  KalmanFilter.hpp  ThresholdFilter.h  ThresholdFilter.hpp
include/lacrosse-bot/tracker/: Ball2DTracker.hpp  BallTracker.h  BallTracker.hpp  Tracker.hpp
include/lacrosse-bot/transform/: ThresholdTransform.h  Transform.h
include/lacrosse_bot/: BallTracker.h
include/lacrosse_bot/filter/: Filter.h  ThresholdFilter.h
lib/: .gitignore
scripts/: Algorithm.py  Ball2DTracker.py  Filter.py  ThresholdFilter.py  Timing.py  Tracker.py  pyqtest.py
src/: Algorithm.cpp  Ball2DTracker.cpp  Ball2DTrackerTest.cpp  BallTracker.cpp  HSVThresholdFilter.cpp  KalmanFilter.cpp  Makefile  Makefile.backup  ThresholdFilter.cpp  ThresholdFilterTest.cpp  Tracker.cpp
